[EX-4489] Fix scroll to top z-index

--- a/packages/x-components/src/design-system/components/layout/default.scss
+++ b/packages/x-components/src/design-system/components/layout/default.scss
@@ -272,5 +272,6 @@
     grid-area: scroll-to-top;
     margin-block-end: var(--x-size-margin-bottom-layout-scroll-to-top);
     margin-inline-start: var(--x-size-margin-left-layout-scroll-to-top);
+    z-index: 1;
   }
 }
